style.css
/* disable touch interactions */
html {
    touch-action: manipulation;
    -ms-touch-action: manipulation;
    overflow: hidden;
}


/* Disable zooming on mobile devices */
@media only screen and (max-width: 767px) {
    /* Disable zooming */
    body {
        touch-action: pan-y;
        user-select: none;
        -webkit-text-size-adjust: none;
        -moz-text-size-adjust: none;
        -ms-text-size-adjust: none;
        max-height: 100vh;
        overflow-y: hidden;
    }

    /* Hide the zoom control */
    /* Note: This may not work on all devices */
    input[type="range"]::-webkit-slider-thumb {
        -webkit-appearance: none;
        appearance: none;
        width: 0;
        height: 0;
    }
}


/*black body*/
body {
    /* sizing */
    height: 100vh;
    width: 100vw;
    background-color: black;
    margin: 0;
    padding: 0;
    overflow: hidden;
}

/* Main section */
main {
    /* sizing */
    height: 100vh;
    width: 100vw;
    bottom: 0;
    position: fixed;
    /* image */
    background-image: url("png/FilmPic1.png");
    background-position: center 0%;
    background-size: cover;
    overflow: hidden;

    /* Motion */
    transition: bottom .8s cubic-bezier(.83, .3, .38, .97);
}

/* MAIN ANIMATIONS */
/* Partial up on 2, fully up on 3/4 */
body[data-state="S2"] > main {
    bottom: 30vh;
}

body[data-state="S3"] > main {
    bottom: 100vh;
}

body[data-state="S4"] > main {
    bottom: 100vh;
}


/* Title */
h1 {
    /* font */
    font-family: Didot, serif;
    font-weight: normal;
    font-size: 5vh;
    letter-spacing: 0.13em;
    text-transform: lowercase;
    /* sizing */
    height: 100vh;
    position: fixed;
    margin: 0;
    padding: 0;
    left: 0;
    right: 0;
    display: flex;
    justify-content: center;
    text-align: center;
    align-items: center;
    /* motion */
    opacity: 1;
    transition: opacity .6s cubic-bezier(.13, .53, .38, .97);
}

/* H1 ANIMATIONS */
/* dissolve after S1 */
body[data-state="S2"] > main > h1 {
    opacity: 0;
}


/* Navigation */
nav {
    /* sizing */
    height: 30vh; /* 1/3 page */
    width: 100vw;
    position: fixed;
    bottom: -25vh;
    transform: scale(.75);
    z-index: 1; /* below nav toggle */

    /* motion */
    transition: bottom .9s cubic-bezier(.83, .3, .38, .97), transform 500ms cubic-bezier(.13, .53, .38, .97);
}

/* Navigation links container */
#nav-links {
    /* sizing */
    height: 20vh;
    width: 100vw;
    display: flex;
    position: fixed;
    justify-content: space-around;
    align-items: center;
}

/* Navigation link button */
#nav-links > .nav-link {
    /* sizing */
    max-height: 15vh;
    outline: none;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;

    /* interactions */
    background: none;
    cursor: pointer;
    border: none;
}

/* Navigation link button's label */
#nav-links > .nav-link > .nav-link-label {
    /* font */
    max-height: 2vh;
    color: white;
    font-family: Avenir, sans-serif;
    font-size: 2vh;
    text-transform: lowercase;
    letter-spacing: 3px;
}

/* Navigation link button's image */
#nav-links > .nav-link > .nav-link-image {
    /* sizing */
    width: calc(100vw / 3.5); /* width of elements */
    border-radius: 0.7vh;
    object-fit: cover;
    overflow: hidden;
}

/* NAV ANIMATIONS */
/* Partial up on 2, fully up on 3, partial down on 4 */
body[data-state="S2"] > nav {
    bottom: 0;
    transform: scale(1);
}

body[data-state="S3"] > nav {
    bottom: 100vh;
    transform: scale(.75);
}

body[data-state="S4"] > nav {
    bottom: 58vh;
    transform: scale(1);
}

/* Navigation toggle button */
#nav-toggle {
    height: 3.5vh;
    width: 6.2vh;
    bottom: 4vh;
    left: calc(50% - (1.77 * 3.5vh) / 2); /* subtract half of width */
    position: fixed;
    z-index: 2; /* above nav links */
    background-color: rgba(255, 255, 255, .5);
    border-radius: 5rem;
    box-shadow: 0 0 4vh rgba(0 0 0 / 37%);
    cursor: pointer;
    border: none;
    display: flex;
    align-items: center;
    justify-content: space-evenly;

    /* motion */
    transition: bottom 1100ms cubic-bezier(.83, .3, .38, .97), transform 500ms cubic-bezier(.13, .53, .38, .97), background-color .5s ease-in-out;

}

/* child element: image in menu toggle */
#nav-toggle > img {
    width: 1.5vh;
    height: auto;
    position: absolute;
    aspect-ratio: initial;
    opacity: 0; /* default to invisible */

    /* motion */
    transition: opacity .5s ease-in-out, trqansform 500ms cubic-bezier(.13, .53, .38, .97);
}

/* TOGGLE BUTTON ANIMATIONS */
/* Expand on hover  */
#nav-toggle:hover {
    transform: scale(1.17);
    background-color: rgba(255, 255, 255, .5);
}


/* S2: done symbol, change color */
body[data-nav="true"][data-state="S2"] #nav-toggle > .done {
    opacity: 1;
}

body[data-nav="true"][data-state="S2"] #nav-toggle {
    background-color: rgba(130 236 236 /.5);
}

/* S3: open down symbol, move up*/
body[data-state="S3"] #nav-toggle:hover > .openUp {
    opacity: 0;
}

body[data-state="S3"] #nav-toggle:hover > .openDown {
    opacity: 1;
}

body[data-state="S3"] #nav-toggle {
    bottom: 80.5vh; /* symmetric to height + bottom */
}

/* S4: open up symbol, move down */
body[data-state="S4"] #nav-toggle:hover > .openUp {
    opacity: 1;
}

body[data-state="S4"] #nav-toggle:hover > .openDown {
    opacity: 0;
}

body[data-state="S4"] #nav-toggle {
    bottom: 60.5vh; /* symmetric to height + bottom */
    background-color: rgba(130 236 236 /.5);
}

/* Image track container */
.image-track {
    pointer-events: auto;
    cursor: pointer;
    display: flex;
    gap: 10vmin; /* spacing between inner parts */
    position: absolute;
    z-index: 3;
    left: 50%;
    bottom: -63vh;
    height: 63vh;
    user-select: none; /* Prevent image highlighting */
    transition: bottom 1200ms cubic-bezier(.83, .3, .38, .97);
}

/* Images inside image track */
.image-track .image {
    width: 37vh;
    height: 63vh;
    object-fit: cover;
    object-position: 100% center;
    pointer-events: auto;
}

/* Project link + Image container */
.image-container {
    display: flex;
    height: 63vh;
    flex-direction: column;
    align-items: center;
    gap: 2vmin;
    position: relative;
}

/* Link under projects */
.label {
    font-family: Avenir, sans-serif;
    font-style: italic;
    font-weight: lighter;
    letter-spacing: .5px;
    color: white;
    font-size: clamp(20px, 2vmin, 4vmin);
}

/* Project link + Image container */
.link-container {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 2vmin;
    position: relative;
}

/* Links under info */
.social {
    font-family: Avenir, sans-serif;
    font-style: italic;
    font-weight: lighter;
    color: white;
    font-size: clamp(20px, 1vmin, 4vmin);
}

/* IMAGE TRACK ANIMATIONS */
/* up to center on 3, down a bit on 4 */
body[data-state="S3"] .image-track {
    bottom: calc(45vh - 31.5vh);
}

body[data-state="S4"] .image-track {
    bottom: calc(25vh - 31.5vh);
}


#loader {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: black;
    display: flex;
    justify-content: center;
    align-items: center;
}

#progress {
    width: 50px;
    height: 50px;
    border: 5px solid black;
    border-top-color: #3498db;
    border-radius: 50%;
    animation: spin 1s ease-in-out infinite;
}

@keyframes spin {
    0% {
        transform: rotate(0);
    }
    100% {
        transform: rotate(360deg);
    }
}

